--- a/src/app/auth/dashboard-components/dashboard-barbers/dashboard-barbers.component.css
+++ b/src/app/auth/dashboard-components/dashboard-barbers/dashboard-barbers.component.css
@@ -196,10 +196,14 @@
     }
 
     .barbers-list-card table td:nth-of-type(3):before {
-        content: "ID Frizera";
+        content: "Telefon";
     }
 
     .barbers-list-card table td:nth-of-type(4):before {
+        content: "Radno vreme";
+    }
+
+    .barbers-list-card table td:nth-of-type(5):before {
         content: "Akcije";
     }
 
