--- a/src/app/auth/dashboard/dashboard.component.css
+++ b/src/app/auth/dashboard/dashboard.component.css
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     z-index: 1000;
-    border-right: 1px solid #34495e;
+    /* border-right: 1px solid #34495e; */
     overflow-y: auto;
 }
 
