Added company owner edit funcionality

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,10 +12,10 @@
             <div class="col-12 col-md-6 order-md-1">
                 <h2>Naša priča</h2>
                 <p>U **BarberApp**-u verujemo da je dobar izgled ključ samopouzdanja. Zato smo kreirali platformu koja
-                    povezuje vas sa najboljim frizerima u vašem gradu. Od malog startapa do jedne od vodećih platformi
+                    vas povezuje sa najboljim frizerima u vašem gradu. Od malog startapa do jedne od vodećih platformi
                     za zakazivanje termina u regionu, naša misija je ostala ista: učiniti proces zakazivanja
                     jednostavnim, brzim i efikasnim.</p>
-                <p>Počeli smo 2020. godine sa vizijom da digitalizujemo frizersku industriju, omogućavajući korisnicima
+                <p>Počeli smo 2025. godine sa vizijom da digitalizujemo frizersku industriju, omogućavajući korisnicima
                     da pronađu savršenog frizera u samo nekoliko klikova, a salonima da optimizuju svoje poslovanje i
                     dosegnu širu klijentelu.</p>
             </div>
@@ -50,7 +50,7 @@
                         class="card-img-top rounded-circle mx-auto mt-3" alt="Član tima 1">
                     <div class="card-body">
                         <h5 class="card-title">Marko Petrović</h5>
-                        <p class="card-text text-muted">CEO & Osnivač</p>
+                        <p class="card-text text-center text-muted">CEO & Osnivač</p>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                         class="card-img-top rounded-circle mx-auto mt-3" alt="Član tima 2">
                     <div class="card-body">
                         <h5 class="card-title">Ana Kostić</h5>
-                        <p class="card-text text-muted">Direktor marketinga</p>
+                        <p class="card-text text-center text-muted">Direktor marketinga</p>
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                         class="card-img-top rounded-circle mx-auto mt-3" alt="Član tima 3">
                     <div class="card-body">
                         <h5 class="card-title">Nikola Jovanović</h5>
-                        <p class="card-text text-muted">Glavni programer</p>
+                        <p class="card-text text-center text-muted">Glavni programer</p>
                     </div>
                 </div>
             </div>
