--- a/src/app/company-barbers/company-barbers.component.html
+++ b/src/app/company-barbers/company-barbers.component.html
@@ -50,7 +50,7 @@
                     class="form-check-input me-2" />
                   <div class="owner-content">
                     <div class="owner-email">{{ owner.email }}</div>
-                    <div class="owner-name">{{ owner.name }}</div>
+                    <div class="owner-name">{{ owner.firstName }} {{ owner.lastName }}</div>
                     <div class="owner-phone">{{ owner.phoneNumber }}</div>
                   </div>
                 </label>
